# fastapi-mcp-openapi

./: DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  demo.py  hello.py  pyproject.toml  setup.sh  test_disabled_capabilities.py  test_library.py  test_mcp_tools.py
.github/workflows/: publish.yml  test.yml
examples/: advanced_example.py  basic_example.py  simple_example.py
fastapi_mcp_openapi/: __init__.py  core.py  main.py  models.py  server.py  utils.py  version.py
tests/: conftest.py  test_basic.py  test_disabled_capabilities.py  test_http_handling.py  test_library.py  test_mcp_tools.py
