[project]
name = "fastapi-mcp-openapi"
version = "0.1.0"
description = "FastAPI MCP OpenAPI - A library that provides MCP tools for endpoint introspection in FastAPI applications"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "FastAPI MCP OpenAPI Contributors"}
]
keywords = ["fastapi", "mcp", "model-context-protocol", "openapi", "api-documentation"]
dependencies = [
    "fastapi>=0.115.14",
    "jsonrpc-base>=2.2.0",
    "mcp>=1.10.1",
    "pydantic>=2.11.7",
    "sse-starlette>=2.3.6",
    "starlette>=0.46.2",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
